Update v:0.1.6 - Fix ReactMessage visibility

--- a/src/css/component/Message.css
+++ b/src/css/component/Message.css
@@ -1,6 +1,6 @@
 .rm-wrapper {
   position: fixed;
-  z-index: 1000;
+  z-index: 1000 !important;
 }
 .rm-item {
   background: var(--secondColor);
